updata main project & challeng project with flexbox layout

--- a/04-CSS-Layouts/main project/Css/main.css
+++ b/04-CSS-Layouts/main project/Css/main.css
@@ -146,7 +146,6 @@ li:last-child {
 nav a:link {
     display: inline-block;
     margin-right: 20px;
-    margin-top: 10px;
 }
 
 nav a:link:last-child {
@@ -160,7 +159,7 @@ aside {
     padding: 40px 30px;
 }
 
-article p:last-child {
+article>p:last-child {
     color: red;
 }
 
@@ -198,7 +197,7 @@ button {
     right: 50px;
 }
 
-/*trying the float proberty*/
+/*trying the float proberty
 .author-photo {
     float: left;
 }
@@ -234,4 +233,62 @@ aside {
 
 footer {
     clear: both;
+}*/
+
+/*
+    trying the float proberty
+*/
+
+.main-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.author-box {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+.author {
+    margin-bottom: 0;
+    margin-left: 20px;
+}
+
+.related-post {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    gap: 20px;
+}
+
+.related-author {
+    margin-bottom: 0;
+    font-weight: normal;
+    font-size: 14px;
+    font-style: italic;
+}
+
+.related-link:link {
+    font-size: 17px;
+    font-weight: bold;
+    font-style: normal;
+    margin-bottom: 5px;
+    display: block;
+}
+
+.flextest {
+    display: flex;
+    gap: 75px;
+}
+
+article {
+    flex: 1;
+    margin-bottom: 20px;
+}
+
+aside {
+    align-self: flex-start;
+    flex: 0 0 300px;
 }
