--- a/04-CSS-Layouts/challenge/css/main.css
+++ b/04-CSS-Layouts/challenge/css/main.css
@@ -28,7 +28,7 @@ h2 {
 .price {
     font-weight: bolder;
     font-size: larger;
-    float: left;
+    /*float: left;*/
 }
 
 .container {
@@ -61,7 +61,7 @@ button,
 }
 
 .shipping {
-    float: right;
+    /*float: right;*/
 }
 
 .details {
@@ -105,6 +105,8 @@ a:visited {
 
 .colors {
     margin: 40px 0 10px 10px;
+    display: flex;
+    gap: 15px;
 }
 /*
 "black white green blue brown red
@@ -118,9 +120,7 @@ a:visited {
 .red {
     width: 20px;
     height: 20px;
-    display: inline-block;
     cursor: pointer;
-    margin-right: 15px;
 }
 
 .black {
@@ -147,7 +147,7 @@ a:visited {
     background-color: red;
 }
 
-
+/*
 
 .prodect-details {
     width: 243px;
@@ -165,4 +165,28 @@ a:visited {
 .prodect-image {
     float: left;
     margin-right: 20px;
+}
+*/
+
+/*
+flex text 
+*/
+
+.prodect {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 40px;
+}
+
+.prodect-image,
+.prodect-hights,
+.prodect-details {
+    flex: 1;
+
+}
+
+.prodect-total-price {
+    display: flex;
+    justify-content: space-between;
 }
