--- a/04-CSS-Layouts/challenge/css/main.css
+++ b/04-CSS-Layouts/challenge/css/main.css
@@ -171,8 +171,12 @@ a:visited {
 /*
 flex text 
 */
+.prodect-total-price {
+    display: flex;
+    justify-content: space-between;
+}
 
-.prodect {
+/* .prodect {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -184,9 +188,35 @@ flex text
 .prodect-details {
     flex: 1;
 
+} */
+
+/* Css Grid */
+
+.container {
+    display: grid;
+    grid-template-columns: 250px repeat(2, 1fr);
+    column-gap: 30px;
+    justify-content: center;
+    align-items: center;
 }
 
-.prodect-total-price {
-    display: flex;
-    justify-content: space-between;
+h2 {
+    grid-column: 1/-1;
 }
+
+button {
+    grid-column: 1 / -1;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
